# thomson-problem

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  thomson.py  thomson_problem.py
