[project]
name = "thomson-problem"
version = "1.0.0"
description = "A simple program to find numerical approximations to the Thomson problem in arbitrary dimensions."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
]
[project.scripts]
thomson = "thomson:main"